--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,10 +16,9 @@
 <link
     href="https://fonts.googleapis.com/css2?family=Limelight&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
-
 <!--Inserindo origem de fontes da google-->
 <link rel="stylesheet" href="styles.css">
 <!--Insere o arquivo CSS pessoal-->
-<link rel="icon" type="image/x-icon" href="/images/favicon.ico"
+<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 <!--Favicon-->
 <title>{{ page.title}} | Jogando o Machado</title>
