--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,10 @@
 <header>
+    <div id="websiteVersion">
+        Vol. 1.0.
+        <p><span id="access-time"></span></p>
+    </div>
     <div class="trueHeader">
-        <h1 id="mainTitle" class="text-nowrap">Portfólio</h1>
+        <h1 id="mainTitle" class="text-nowrap">Portfólio News</h1>
         <h2 id="subTitle">de José Lucas</h2>
         <!--Título principal da sua página. Importante para SEO-->
     </div>
