--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
             <!--Título principal da sua página. Importante para SEO-->
         </div>
         <div class="item">
-            <img id="profilePic" class="sub-item" src="{{ " /assets/images/profilePic.png" | relative_url }}" alt="Profile Picture">
+            <img id="profilePic" class="sub-item" src="{{ '/assets/images/profilePic.png' | relative_url }}" alt="Profile Picture">
         </div>
     </div>
     <nav id="mainNav">
