--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 <!--Meta para definir UTF-8, que reconhece caracteres da Lingua Portuguesa.-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--Meta para definir a largura da página.-->
-<meta name="description" content="Portfólio profissional ALPHA - José Lucas">
+<meta name="description" content="Portfólio profissional BETA - José Lucas">
 <!--Meta que define a descrição do website-->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
@@ -23,8 +23,13 @@
     rel="stylesheet">
 <!--Inserindo origem de fontes da google-->
 <link rel="stylesheet" href="styles.css">
-<script src="{{ '/assets/js/main.js' | relative_url }}"></script>
 <!--Insere o arquivo CSS pessoal-->
+<script src="{{ '/assets/js/main.js' | relative_url }}"></script>
+<!--JS inserido no Jekyll-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<!--Biblioteca jQuery-->
+<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+<!--Biblioteca Typed-->
 <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 <!--Favicon-->
 <title>{{ page.title}} | Jogando o Machado</title>
