--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,7 @@
             <li><a class="navItem" href="index.html">Início</a></li>
             <li><a class="navItem" href="contato.html">Contato</a></li>
             <li><a class="navItem" href="projetos.html">Projetos</a></li>
+            <li><a class="navItem" href="historicoescolar">Histórico Escolar</a></li>
         </ul>
     </nav>
 </header>
