--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,18 @@
 <header>
     <div id="titleSection" class="container">
-        <div id="versionNTime" class="item">
-            <p>Vol. 2.0.</p>
-            <p><span id="access-time"></span></p>
+        <div id="priceNEdition">
+            <p id="price">25¢</p>
+            <p id="edition">Edição 3.0</p>
         </div>
-        <div id="titles" class="item">
+        <div id="title" class="item">
             <h1 id="mainTitle" class="subitem"><a href="index.html">Portfólio News</a></h1>
         </div>
         <div class="item">
-            <img id="profilePic" class="sub-item" src="{{ '/assets/images/profilePic.png' | relative_url }}" alt="Profile Picture">
+            <img id="profilePic" class="sub-item" src="{{ '/assets/images/profilePic.png' | relative_url }}"
+                alt="Profile Picture">
+        </div>
+        <div id="secTime" class="item">
+            <p id="time"><span id="access-time"></span></p>
         </div>
     </div>
     <nav id="mainNav">
