090725 ON dsktp cmt 1

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,12 +24,16 @@
 <!--Inserindo origem de fontes da google-->
 <link rel="stylesheet" href="styles.css">
 <!--Insere o arquivo CSS pessoal-->
-<script src="{{ '/assets/js/main.js' | relative_url }}"></script>
-<!--JS inserido no Jekyll-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <!--Biblioteca jQuery-->
 <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 <!--Biblioteca Typed-->
+<script src="{{ '/assets/js/main.js' | relative_url }}"></script>
+<!--JS pessoal inserido no Jekyll-->
 <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 <!--Favicon-->
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" defer></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js" defer></script>
+<!--Ion Icons-->
+
 <title>{{ page.title}} | Jogando o Machado</title>
